# fwd-proxy

./: CMakeLists.txt  README.md
src/: main.cpp
src/client/: Client.cpp  Client.h
src/enum/: AppMode.cpp  AppMode.h  HandshakeState.cpp  HandshakeState.h  SecurityType.cpp  SecurityType.h
src/proxy/: Server.cpp  Server.h
